--- a/css/exercice.css
+++ b/css/exercice.css
@@ -4,7 +4,10 @@
 }
 
 /* 2. exercice-justify-1 */
-
+.exercice-justify-1  .container {
+  display: flex;
+  flex-direction: row;
+justify-content: flex-end;}
 
 /* 3. exercice-justify-2 */
 
