--- a/css/exercice.css
+++ b/css/exercice.css
@@ -34,7 +34,12 @@
 }
 
 /* 6. exercice-align-2 */
-
+.exercice-align-2 .container {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: flex-start;
+}
 
 /* 7. exercice-align-3 */
 
