--- a/css/exercice.css
+++ b/css/exercice.css
@@ -42,7 +42,12 @@
 }
 
 /* 7. exercice-align-3 */
-
+.exercice-align-3 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
 
 /* 8. exercice-all-1 */
 
