--- a/css/exercice.css
+++ b/css/exercice.css
@@ -58,4 +58,9 @@
 }
 
 /* 9. exercice-all-2 */
-
+.exercice-all-2 .container {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+}
